	CommandLine:	1.0.4.1

1.1.1.4

	main map (luca.map) is now higher resolution (800x500)
	world map (world.map) is now higher resolution (800x500)
	MapEditor can load TEG/JTEG xml maps
	Card Ownership view shows you the cards you own when you dont own the country in Yellow
	online game setup ui fixes
	FlashGUI will remember the number of dice you are attacking/defending with in a given battle

	Android 37 nullpointer in 2 exit events fixed (hack)
		   nullpointer in quit game and open stats activity at the same time fixed (hack)
		   show errors in saving file as well as in downloading it to the user (IOException: No space left on device)
		   on Android can select the number of dice to attack and defend
	Android 36 grasshopper update
		   game opening and hiding at same time/del and load auto.save in different threads fix
		   AI error in map Artic Map (divide by zero if there is no way out of a continent) fixed
	Android 35 StackOverflowError in onSaveInstanceState fix
	Android 34 auto.save file fails to fully create on some systems, then the load fails to load it leaving the user with a blank screen
	Android 33 find Closest Country if we are not touching a actual Country
		   if the system kills off the game because of too little mem, the game will then be loaded on next startup
		   do not overlap text in MapStore and Lobby game list
	Android 32 android:installLocation changed from preferExternal to auto as it did not work on some devices (GT-i5500)
		   cards graph added to see number of cards of other players
		   new About screen with advert added
		   keepAlive changed from < FROYO to <= GINGERBREAD_MR1 maybe it will fix the -1 http error
	Android 31 allows human to view mssion at end of game if AI won
		   wakelock added when game screen is open
		   got rid of titlebar in main menu
		   fixed: nullpointer in getting game commands when game is not open

1.1.1.3 (10.03.2013)

	Online Mini Lobby added to FlashGUI and SwingGUI